# surrealix

./: Cargo.toml  expanded.rs  output.txt  schema.surql
examples/: basic.rs  dioxus.rs
src/: lib.rs
surrealix-core/: Cargo.toml
surrealix-core/src/: code_generator.rs  errors.rs  lib.rs  schema.rs  types.rs
surrealix-core/src/analyzer/: create.rs  delete.rs  insert.rs  mod.rs  relate.rs  select.rs  update.rs
surrealix-core/src/analyzer/function/: array.rs  crypto.rs  datatype.rs  duration.rs  math.rs  mod.rs  object.rs  parse.rs  rand.rs  search.rs  string.rs  time.rs  vector.rs
surrealix-core/src/ast/: mod.rs
surrealix-core/src/codegen/: mod.rs
surrealix-core/src/parser/: mod.rs  query_type.rs  select.rs  types.rs
surrealix-macros/: Cargo.toml
surrealix-macros/src/: lib.rs  utils.rs
surrealix-macros/src/build_query/: generator.rs  mod.rs  parser.rs
surrealix-macros/src/common/: mod.rs  schema_loader.rs
