[package]
name = "surrealix-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
surrealix-core = { path = "../surrealix-core" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
surrealdb = { version = "1.0.0", features = ["kv-mem", "protocol-http"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0.61"
dotenv = "0.15.0"
