[package]
name = "surrealix-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true


[features]
default = []
serde = ["dep:serde", "dep:serde_json", "surrealix-core/serde"]

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
surrealdb = { version = "1.0.0", features = ["kv-mem", "protocol-http"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0.61"
dotenv = "0.15.0"

surrealix-core = { version = "0.1.0", path = "../surrealix-core" }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
convert_case = "0.6.0"
